--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,17 @@
     <string name="all">All</string>
     <string name="please_select">Please Select..</string>
     <string name="select_a_category">Select a category</string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
 
     <string-array name="categories">
+        <item>All</item>
+        <item>Lifestyle</item>
+        <item>Technology</item>
+        <item>Miscellaneous</item>
+    </string-array>
+
+    <string-array name="add_categories">
         <item>Lifestyle</item>
         <item>Technology</item>
         <item>Miscellaneous</item>
