Created branch for assignment 4

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
 
     <!-- Messages Preferences -->
     <string name="author_title">Default Author</string>
+    <string name="default_category">Default Category</string>
+    <string name="default_author">Test</string>
 </resources>
